카카오맵 지도정보표시

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=367839760b1e5b4be3e8653b20f01079"></script>
   <title>React App</title>
 </head>
 
