--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,8 @@
   <div class="mask">Loading...</div>
 
   <script>
-    // const path = 'https://eurako.github.io/react_business/';
-    const path = 'https://22-04-react.github.io/react_portfolio/';
-    // const path = 'http://localhost:3000/';
+    const path = 'https://eurako.github.io/react_business/';
+
     const imgs = [
       path + 'img/pic1.jpg',
       path + 'img/pic2.jpg',
